examples/typechecking/kinds.an

// Non-generic user-defined type used as annotation
type Foo = foo: Unit

// Generic user-defined type applied to the correct number of args
type Box a = value: a

// Well-kinded: Foo has Kind::Type, used directly
use_foo (x: Foo) : Foo = x

// Well-kinded: Box applied to one argument
use_box (x: Box I32) : Box I32 = x

// Well-kinded: type variable t used in a function signature
identity (a: t) : t = a

// Error case: Foo has Kind::Type, applying it to Bool is a kind mismatch
bad_app (x: Foo Bool) : Foo Bool = x

// Error case: Box has Kind::TypeConstructorSimple(1), not Kind::Type
bad_unapplied (x: Box) : Box = x

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Foo =
//     foo: Unit
// 
// type Box a =
//     value: a
// 
// (use_foo: fn Foo -> Foo) ((x: Foo)) : Foo = (x: Foo)
// 
// (use_box: fn (Box I32) -> Box I32) ((x: Box I32)) : Box I32 = (x: Box I32)
// 
// (identity: fn t -> t) ((a: t)) : t = (a: t)
// 
// (bad_app: fn (error) -> (error)) ((x: (error))) : Foo Bool = (x: (error))
// 
// (bad_unapplied: fn Box -> Box) ((x: Box)) : Box = (x: Box)

// expected stderr:
// examples/typechecking/kinds.an:18:13
// 17 | // Error case: Foo has Kind::Type, applying it to Bool is a kind mismatch
// 18 | bad_app (x: Foo Bool) : Foo Bool = x	// error: Expected 0 arguments but found 1
//    |             ^^^^^^^^
// 
// examples/typechecking/kinds.an:18:25
// 17 | // Error case: Foo has Kind::Type, applying it to Bool is a kind mismatch
// 18 | bad_app (x: Foo Bool) : Foo Bool = x	// error: Expected 0 arguments but found 1
//    |                         ^^^^^^^^
// 
// examples/typechecking/kinds.an:21:19
// 20 | // Error case: Box has Kind::TypeConstructorSimple(1), not Kind::Type
//    | // error: Expected a type here, this type constructor is missing 1 argument
// 21 | bad_unapplied (x: Box) : Box = x
//    |                   ^^^
// 
// examples/typechecking/kinds.an:21:26
// 20 | // Error case: Box has Kind::TypeConstructorSimple(1), not Kind::Type
//    | // error: Expected a type here, this type constructor is missing 1 argument
// 21 | bad_unapplied (x: Box) : Box = x
//    |                          ^^^
// 
// Found 4 errors and 0 warnings
